Stop editor from loading a file twice and be more aggressive with killing of file watchers